flux/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  jellyfin
  namespace: jellyfin
spec:
  selector:
    app:  jellyfin
  type: LoadBalancer
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: 8096
    - name: https
      port: 8920
      protocol: TCP
      targetPort: 8920
    - name: discovery
      port: 7359
      protocol: UDP
      targetPort: 7359
    - name: dnla
      port: 1900
      protocol: UDP
      targetPort: 1900
