flux/apps/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - jellyfin.${GLOBAL_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyfin
      port: 8096
