flux/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  ingressClassName: nginx
  rules:
  - host: jellyfin.${GLOBAL_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
  tls:
    - hosts:
        - jellyfin.${GLOBAL_DOMAIN}
      secretName: jellyfin-tls
